# Films-rest-API

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: app.db  constants.py  create_entities.py  db.py  db_models.py  db_queries.py  request_models.py  update_entities.py  urls.py  utils.py
tests/: conftest.py  test_urls.py
